--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,7 @@
   </section>
 
   <footer class="main" id="f1">
+    <a href="https://github.com/raulpelayo/quiz">Proyecto en Github</a> 
   	<a href="https://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
   </footer>
   </div>
