--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
   <nav class="main" id="n1" role="navigation">
   	<span><a href="/">Inicio</a></span>
   	<span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/author">Acerca del autor</a></span>
   </nav>
 
   <section class="main" id="s1">
@@ -28,7 +29,7 @@
   </section>
 
   <footer class="main" id="f1">
-    <a href="https://github.com/raulpelayo/quiz">Proyecto en Github</a> 
+    <a href="https://github.com/raulpelayo/quiz">Proyecto en Github</a>
   	<a href="https://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
   </footer>
   </div>
