--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,4 +2,6 @@
 <% var i; for (i=0; i < quizes.length; i++) { %>
    <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 <% } %>
+<p>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
 </table>
