--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,13 +21,21 @@
   <nav class="main" id="n1" role="navigation">
   	<span><a href="/">Inicio</a></span>
   	<span><a href="/quizes">Preguntas</a></span>
-    <span><a href="/author">Acerca del autor</a></span>
+    <span><a hrefa="/author">Acerca del autor</a></span>
   </nav>
 
   <section class="main" id="s1">
-  	<%- body %>
-  </section>
-
+         <% if (errors.length){ %>
+           <span id='ErrorMsgs'>
+             Corregir errores:<br />
+             <% for(var i in errors) { %>
+               <span><%= errors[i].message %></span><br/>
+             <% } %>
+           </span>
+         <% } %>
+         <%- body %>
+       </section>
+       
   <footer class="main" id="f1">
     <a href="https://github.com/raulpelayo/quiz">Proyecto en Github</a>
   	<a href="https://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
