--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -2,5 +2,13 @@
 <input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/> <p>
 <label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/> <p>
+<label for="tema" class="rem">Tema:</label>
+<select name="quiz[tema]">
+  <option value="otro" <%if ((typeof quiz.tema=='undefined') || (quiz.tema=='otro')) { %> selected <% } %>>Otro</option>
+  <option value="humanidades" <%if ((typeof quiz.tema!='undefined') && (quiz.tema=='humanidades')) { %> selected <% } %>>Humanidades</option>
+  <option value="ocio" <%if ((typeof quiz.tema!='undefined') && (quiz.tema=='ocio')) { %> selected <% } %>>Ocio</option>
+  <option value="ciencia" <%if ((typeof quiz.tema!='undefined') && (quiz.tema=='ciencia')) { %> selected <% } %>>Ciencia</option>
+  <option value="tecnologia" <%if ((typeof quiz.tema!='undefined') && (quiz.tema=='tecnologia')) { %> selected <% } %>>Tecnología</option>
+</select>
 <a href="/quizes"><button type="button">Cancelar</button></a>
 <input type="submit" value="Salvar">
