--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,6 +1,8 @@
 <table>
 <% var i; for (i=0; i < quizes.length; i++) { %>
-   <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+   <tr>
+<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+<td style="text-align: left;"><%= quizes[i].tema %></td>
 <td>
   <a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a>
 </td>
