--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,4 +1,7 @@
 <table>
+
+<tr><td><form method="get" action=""><label>Buscador de preguntas</label><input type="text" name="search"/><input type="submit" value="Buscar"/></form></td></tr>
+
 <% var i; for (i=0; i < quizes.length; i++) { %>
    <tr>
 <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
@@ -16,5 +19,5 @@
 </tr>
 <% } %>
 <p>
-<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<tr><td><a href="/quizes/new"><button type="button">Crear pregunta</button></a></td></tr>
 </table>
