--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,17 +7,22 @@
 <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
 <td style="text-align: left;"><%= quizes[i].tema %></td>
 <td>
-  <a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a>
-</td>
-<td>
-      <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-        <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-          borrar
-        </button>
-      </form>
-    </td>
+  <%if(session.user){%>
+  <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+  <td>
+  <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+    <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+      borrar
+    </button>
+  </form>
+  </td>
+  <%}%>
 </tr>
 <% } %>
 <p>
-<tr><td><a href="/quizes/new"><button type="button">Crear pregunta</button></a></td></tr>
+<tr><td>
+  <%if(session.user){%>
+    <a href="/quizes/new"><button>Crear pregunta</button></a>
+  <%}%>
+</td></tr>
 </table>
